# unified-context

./: .gitignore  DOCUMENTATION_UPDATES.md  GETTING-STARTED.md  IMPLEMENTATION_SUMMARY.md  MCP_TOOLS.md  README.md  REFACTORING_NOTES.md  UPDATING.md  pyproject.toml
.claude/: settings.local.json
documents/: Architecture and Implementation Guide.md  Unified Cross-IDE Context System - Architecture and Implementation Guide -v2.docx  chat.md
unified_context/: __init__.py  adapters.py  cli.py  engine.py  mcp_server.py  schema.py
unified_context.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
